--- a/UniSS_mobile_app/package.json
+++ b/UniSS_mobile_app/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
+    "react-native-maps": "^0.30.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
