--- a/UniSS_mobile_app/package.json
+++ b/UniSS_mobile_app/package.json
@@ -10,19 +10,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.0",
+    "@kichiyaki/react-native-barcode-generator": "^0.6.7",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "axios": "^0.26.1",
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
+    "expo-cli": "^5.3.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-1d-barcodes": "^0.1.3",
+    "react-native-barcode": "^0.2.2",
+    "react-native-barcode-builder": "^2.0.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
-    "react-native-maps": "^0.30.1",
-    "react-native-web": "0.17.1"
+    "react-native-maps": "0.29.4",
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
