--- a/UniSS_mobile_app/package.json
+++ b/UniSS_mobile_app/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.5.2",
     "axios": "^0.26.1",
     "expo": "^44.0.0",
+    "expo-barcode-scanner": "^11.2.1",
     "expo-cli": "^5.3.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
